--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2.1.1
-        id: go
-
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+
+      - name: Set up Go Env
+        uses: actions/setup-go@v2.1.3
+        id: go
 
       - name: Get dependencies
         run: |
