--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Set up Go Env
         uses: actions/setup-go@v2.1.3
         id: go
+        with:
+          go-version: "1.15.5
 
       - name: Get dependencies
         run: |
