--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-go@v2.1.3
         id: go
         with:
-          go-version: "1.15.5"
+          go-version: '1.15.5'
 
       - name: Get dependencies
         run: |
