--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-go@v2.1.3
         id: go
         with:
-          go-version: '1.15.5'
+          go-version: '1.16.3'
 
       - name: Get dependencies
         run: |
@@ -33,8 +33,8 @@ jobs:
       - name: Publish Docker
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: registry.redhome.cc/redhome/hduin-qq-robot
-          registry: registry.redhome.cc
+          name: registry.cn-hangzhou.aliyuncs.com/dreamer2q/small-bobot
+          registry: registry.cn-hangzhou.aliyuncs.com
           username: ${{ secrets.DOCKER_USER }} # 用户名
           password: ${{ secrets.DOCKER_PASS }} # 密码
           dockerfile: Dockerfile
@@ -43,4 +43,4 @@ jobs:
       - name: Deploy
         run: |
           # sleep 1
-          # curl -d "" https://port.redhome.cc/api/webhooks/d2dd60c2-4c4e-4d02-9b10-0506349c1cf0
+          curl -d "" ${{ secrets.WEBHOOK }}
